--- a/style.scss
+++ b/style.scss
@@ -108,6 +108,17 @@ body {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        background-attachment: fixed;
+      }
+      .banner-tag-text{position:absolute;
+     bottom: 30%;
+       left:5%;
+        h4{font-family: $font-sen;
+          margin: 0;
+          font-size: 18px;
+          text-transform: uppercase;
+          mix-blend-mode:difference;
+        }
       }
     }
     .image-abs {
@@ -174,7 +185,7 @@ body {
     font-family: $font-pop;
   }
   .about-blogs {
-    .contentBox {
+    .contentBoxl {
       display: flex;
       flex-direction: column;
       width: 90%;
@@ -192,6 +203,7 @@ body {
       .related-text {
         width: 90%;  
          padding: 50px 0;
+
         h3 { 
       padding-bottom: 20px;
           letter-spacing: 4px;
@@ -204,6 +216,246 @@ body {
 font-family: $font-hel;
         }
       }
+    }
+    .contentBoxr {
+      display: flex;
+      flex-direction: column;
+      width: 90%;
+  
+     margin-right: 0;
+      margin-left: 10%;
+      .img-box {
+        border-radius: 5px;
+        overflow: hidden;
+        height: 550px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .related-text {
+       
+        width: 90%;  
+         padding: 50px 0;
+margin-left: 10%;
+        h3 { 
+      padding-bottom: 20px;
+          letter-spacing: 4px;
+          font-size: 34px;
+          word-spacing: 5px;
+          text-transform: uppercase;
+          font-family: $font-cinzel;
+        }
+        p{
+font-family: $font-hel;
+        }
+      }
+    }
+  }
+}
+.portfolio{
+  // width: 100%;
+  // height: 100%;
+  // background: url("../images/bg-pattern.jpg");
+  position: relative;
+  padding: 100px 0;
+//  background-attachment: fixed;
+//  background-repeat: no-repeat;
+//  background-size: cover;
+  .sec-heading {
+    font-family: $font-sen;
+    font-size: 100px;
+    font-weight: 700;
+    a {
+      display: inline-flex;
+      flex-wrap: wrap;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 50px;
+      transition: 300ms all ease-in-out;
+      line-height: 80px;
+      letter-spacing: 1px;
+      span {
+        margin-right: 10px;
+      }
+      i {
+        font-size: 90px;
+        transition: all 200ms ease-in-out;
+      }
+      &:hover {
+        transition: 300ms all ease-in-out;
+        color: #5c5c5c;
+        font-size: 92px;
+        letter-spacing: 12px;
+        line-height: 72px;
+        i {
+          scale: 1.2;
+          transition: all 200ms linear;
+          rotate: 180deg;
+        }
+      }
+    }
+  }
+
+  .gallery-wrapper{
+    position: relative;
+    z-index: 500;
+   
+        //  .img1 {margin-top: 0;  }
+        // .img2 {margin-top: 25vh }
+        // .img3 {margin-top:50vh ;  }
+        // .img4 {margin-top:-25vh  }
+        // .img5 {margin-top: 0vh; }
+        // .img6 { margin-top:25vh}
+        // .img7 { margin-top: -25vh;}
+        // .img8 {margin-top: 0vh}
+        // .img9 { margin-top: 25vh;}
+        // .img10 { margin-top: -25vh; }
+      .gallery-item {   
+       
+         margin-top: 100px;
+    .contentgallery {height: 500px;
+      width: 100%;
+         visibility:hidden;        
+
+     
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    }
+  }
+}
+.contact{
+ 
+  padding: 80px 0;
+  .sec-heading {
+    font-family: $font-sen;
+    font-size: 100px;
+    font-weight: 700;
+    a {
+      display: inline-flex;
+      flex-wrap: wrap;
+      align-items: center;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 50px;
+      transition: 300ms all ease-in-out;
+      line-height: 80px;
+      letter-spacing: 1px;
+      span {
+        margin-right: 10px;
+      }
+    
+      &:hover {
+        transition: 300ms all ease-in-out;
+        color: #5c5c5c;
+        font-size: 92px;
+        letter-spacing: 12px;
+        line-height: 72px;
+     
+      }
+    }
+  }
+  .textbox {
+    margin: 30px 0;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: $font-pop;
+  }
+  .contact-wrapper{
+    width: 80%;
+    border: 1px solid #f5f5f5;
+    box-shadow: 0 0 15px -5px #c4c4c4;
+    border-radius: 15px;
+    padding: 70px 0;
+background-color: #f8f8f8;
+margin: 0 auto;
+label{
+font-family: $font-sen;
+}
+.form-control{
+
+    border-color:#fff;
+  &:focus{   border-color:#ececec;
+  box-shadow: none;
+  }
+ 
+} .form-btn{
+  padding: 10px 0;
+    border: none;
+    font-family: $font-sen;
+    border-radius: 5px;
+    transition: 200ms all ease-in-out;
+    &:hover {
+      transition: 200ms all ease-in-out;
+      color: #5c5c5c;
+      letter-spacing: 1.2px;
+  }
+}}
+}
+.footer{
+  padding: 150px 0;
+  .f-content{display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    .own-name{text-transform: uppercase;
+      font-family: $font-sans, $font-hel;
+      font-weight: 500;
+      font-size: 24px;
+    }
+    .logo-wrapper {
+     
+      h1 {
+        font-size: 28px;
+        font-weight: 600;
+        color: $black-text;
+        font-family: $font-sans, $font-hel;
+        a {
+          position: relative;
+          -webkit-user-select: none;
+          user-select: none;
+          padding: 5px 0;
+          &::before {
+            display: block;
+            content: " ";
+            width: 100%;
+            height: 2px;
+            background: $black-text;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+          &::after {
+            display: block;
+            content: " ";
+            width: 100%;
+            height: 2px;
+            background: $black-text;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+          }
+        }
+      }
+    }
+    .social-links{display: flex;
+      align-items: baseline;
+      gap: 40px;
+      color: $black-text;
+
+.iconbox{
+  i{
+    font-size: 28px;
+  }
+}
     }
   }
 }
